syntax = "proto3";

package calculator;

option go_package = "github.com/shukra-in-spirit/udemy_grpc/calculator/proto";

message CalculatorRequest {
    int64 first_num = 1;
    int64 second_num = 2;
}

message CalculatorResponse {
    int64 result = 1;
}

message FactorRequest {
    int64 num = 1;
}

message AverageRequest {
    float num = 1;
}

message AverageResponse {
    float result = 1;
}

message MaxRequest {
    int32 number = 1;
}
  
message MaxResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Calculator (CalculatorRequest) returns (CalculatorResponse);
    rpc Factors (FactorRequest) returns (stream CalculatorResponse);
    rpc Average (stream AverageRequest) returns (AverageResponse);
    rpc Max(stream MaxRequest) returns (stream MaxResponse);
}